opover flickering text on safari fix, button icon oapcity fix

--- a/scss/partials/_buttons.scss
+++ b/scss/partials/_buttons.scss
@@ -148,7 +148,7 @@ $iconsPath: "../assets/icons";
     .slyce-svg-icon {
       fill: $white;
     }
-    &:active {
+    &:active:not(:disabled) {
       .slyce-svg-icon {
         opacity: 0.56;
       }
