--- a/scss/partials/_dropdowns.scss
+++ b/scss/partials/_dropdowns.scss
@@ -37,7 +37,7 @@ $iconsPath: "../assets/icons/";
     padding: 8px 16px;
     border-radius: 3px;
     font-weight: 300;
-    border-color: $gray_5;
+    border: 1px solid $gray_5;
     &:focus {
       background-color: rgba(51, 51, 51, 0.5);
       color: $white;
