--- a/scss/partials/_progress.scss
+++ b/scss/partials/_progress.scss
@@ -1,9 +1,11 @@
 @import '../_colors';
 
+$progress-tip-size: 12px;
+
 .progress{
   background-color: $gray_5;
   border-radius: 50px;
-  height: 7px;
+  height: 5px;
   overflow: visible;
 }
 
@@ -18,7 +20,7 @@
       transition-delay: 0s;
 
       .slyce-popover{
-        transition-delay: .2s;
+        transition-delay: 0.2s;
         opacity: 1;
       }
     }
@@ -26,29 +28,43 @@
 }
 
 .slyce-progress__tip{
-  transform: scale(0);
-  opacity: 0;
-  transition: all .2s linear;
-  transition-delay: 1s;
-  position: absolute;
-  height: 12px;
-  width: 12px;
-  background-color: inherit;
-  right: -6px;
-  border-radius: 100px;
-  border: 3px solid rgba($primary, 0.5);
-  box-sizing: content-box;
-}
-
-.slyce-popover--right{
-  left: auto;
-  right: 0;
-}
-
-.slyce-popover{
-  opacity: 0;
   transition: all .2s;
   transition-delay: 1.2s;
+  transform: scale(0);
+  opacity: 0;
+  background-color: inherit;
+  border-radius: 100px;
+  box-sizing: border-box;
+  position: absolute;
+  height: $progress-tip-size;
+  width: $progress-tip-size;
+  right: -$progress-tip-size/2;
+  top: -$progress-tip-size/4;
+
+  .slyce-popover{
+    transition-delay: 1s;
+  }
+
+  &::after{
+    transition: all .3s;
+    transition-delay: .8s;
+    content: "";
+    height: $progress-tip-size + $progress-tip-size / 2;
+    width: $progress-tip-size + $progress-tip-size / 2;
+    position: absolute;
+    top: -$progress-tip-size / 4;
+    left: -$progress-tip-size / 4;
+    border-radius: 100px;
+    display: block;
+    background-color: rgba($primary, 0.3);
+  }
+}
+
+
+.slyce-popover{
+  transition-property: all;
+  transition-duration: .2s;
+  opacity: 0;
   margin-top: 18px;
   top: 0;
   left: 0;
@@ -60,4 +76,20 @@
   border-radius: 3px;
   box-shadow: 1px 1px 6px rgba(51,51,51, 0.2);
   padding: 12px;
+  cursor: auto;
+  z-index: 99;
+  -webkit-font-smoothing: subpixel-antialiased;
+
+  &, * {
+    line-height: 20px;
+    font-weight: 300;
+    font-size: 14px;
+    font-weight: 300;
+    font-size: 14px;
+  }
+}
+
+.slyce-popover--right{
+  left: auto;
+  right: 0;
 }
